@@ -39,6 +39,11 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -75,6 +80,12 @@
                                 <option>--enable-native-access=javafx.graphics</option>
                                 <option>--add-exports=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED</option>
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                             </options>
                         </configuration>
                     </execution>
